--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown hidding">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               All
             </a>
@@ -119,6 +119,28 @@
                 <a class="nav-link" href="#">New Releases</a>
               </li>
 
+              <li class="nav-item">
+                <a class="nav-link" href="#">Registry</a>
+              </li>
+
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">Today's Deals</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">Help Center</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">Music</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="#">Books</a>
+              </li>
+
+
               <!-- <li class="nav-item">
                 <a class="nav-link" aria-disabled="true">Disabled</a>
               </li> -->
@@ -127,6 +149,70 @@
           </div>
         </div>
       </nav>
+
+<!-- 2nd navbar end  -->
+
+<!-- image slider start -->
+
+<div id="carouselExampleIndicators" class="carousel slide">
+    <!-- <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div> -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./images/imageslider1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./images/imageslider2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./images/imageslider3.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./images/imageslider4.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./images/imageslider5.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./images/imageslider6.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./images/imageslider7.jpg" class="d-block w-100" alt="...">
+      </div>
+
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <!-- image slider end  -->
+
+
+  <!-- card Section -->
+
+  <div class="container">
+    <div class="row">
+        <div class="col-3">
+            <div class="card shadow-lg p-3 mb-5 bg-body-tertiary">
+                <div class="card-body">
+                  <h5 class="card-title" id="card1">Card title</h5>               
+              
+                <img src="./images/cardSection-bag1.jpg" class="card-img-bottom w-100" alt="bag1"  >
+              </div>
+              <p class="card-text">This is a wider card </p>
+            </div>
+        </div>
+    </div>
+  </div>
 
 
     
