--- a/index.html
+++ b/index.html
@@ -202,11 +202,10 @@
   <div class="container">
     <div class="row">
         <div class="col-3">
-            <div class="card shadow-lg p-3 mb-5 bg-body-tertiary">
-                <div class="card-body">
-                  <h5 class="card-title" id="card1">Card title</h5>               
-              
-                <img src="./images/cardSection-bag1.jpg" class="card-img-bottom w-100" alt="bag1"  >
+            <div class="card h-100 shadow-lg p-2 mb-2 bg-body-tertiary">
+                <div class="card-body ">
+                  <h5 class="card-title" id="card1">Card title</h5>                             
+                <img src="./images/cardSection-bag1.jpg" class="card-img-bottom w-100 " alt="bag1"  >
               </div>
               <p class="card-text">This is a wider card </p>
             </div>
