--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 <!-- image slider start -->
 
-<div id="carouselExampleIndicators" class="carousel slide">
+<div id="carouselExampleIndicators" class="carousel slide z-n1 position-absolute">
     <!-- <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -199,10 +199,10 @@
 
   <!-- card Section -->
 
-  <div class="container">
+  <div class="container z-0" style="border: 2px solid rgb(30, 0, 255);">
     <div class="row">
         <div class="col-4">
-            <div class="card w-75 h-100 shadow-lg p-2 mb-2 bg-body-tertiary">
+            <div class="card w-75  shadow-lg p-2 mb-2 bg-body-tertiary ">
                 <div class="card-body ">
                   <h5 class="card-title" id="card1">Card title</h5>                             
                 <img src="./images/cardSection-bag1.jpg" class="card-img-bottom w-100 " alt="bag1"  >
