--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 <!-- image slider start -->
 
-<div id="carouselExampleIndicators" class="carousel slide z-n1 position-absolute">
+<div id="carouselExampleIndicators" class="carousel slide position-absolute">
     <!-- <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -199,7 +199,7 @@
 
   <!-- card Section -->
 
-  <div class="container z-0" style="border: 2px solid rgb(30, 0, 255);">
+  <div class="container cardimage" style="border: 2px solid rgb(30, 0, 255);">
     <div class="row">
         <div class="col-4">
             <div class="card w-75  shadow-lg p-2 mb-2 bg-body-tertiary ">
