--- a/index.html
+++ b/index.html
@@ -205,18 +205,24 @@
             <div class="card w-75  shadow-lg p-2 mb-2 bg-body-tertiary ">
                 <div class="card-body ">
                   <h5 class="card-title" id="card1">Card title</h5>                             
-                <img src="./images/cardSection-bag1.jpg" class="card-img-bottom w-100 " alt="bag1"  >
+                <img src="./images/cardSection-bag1.jpg" id="cardimage1" class="card-img-bottom w-100 " alt="bag1"  >
               </div>
-              <p class="card-text">This is a wider card </p>
+              <p class="card-text" id="cardtext1">This is a wider card </p>
             </div>
         </div>
     </div>
-  </div>
+  </div> 
 
 
     
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 </html>
