--- a/index.html
+++ b/index.html
@@ -197,19 +197,36 @@
   <!-- image slider end  -->
 
 
-  <!-- card Section -->
+  <!-- card Section
+  <div class="cardSection container cardimage"></div> -->
 
-  <div class="container cardimage" style="border: 2px solid rgb(30, 0, 255);">
-    <div class="row">
-        <div class="col-4">
-            <div class="card w-75  shadow-lg p-2 mb-2 bg-body-tertiary ">
+  <div class="container-fluid cardimage" style="border: 2px solid rgb(30, 0, 255);">
+    <div class="row cardSection">
+        <!-- <div class="col-4 ">
+            <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
                 <div class="card-body ">
                   <h5 class="card-title" id="card1">Card title</h5>                             
-                <img src="./images/cardSection-bag1.jpg" id="cardimage1" class="card-img-bottom w-100 " alt="bag1"  >
+                <img src="./images/cardSection-bag1.jpg" id="cardimage1" class="card-img-bottom " alt="bag1"  >
               </div>
               <p class="card-text" id="cardtext1">This is a wider card </p>
             </div>
         </div>
+
+        <div class="col-4">
+          <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+              <div class="card-body ">
+                <h5 class="card-title" id="card1">Card title</h5>                             
+              <img src="./images/cardSection-bag1.jpg" id="cardimage1" class="card-img-bottom " alt="bag1"  >
+            </div>
+            <p class="card-text" id="cardtext1">This is a wider card </p>
+          </div>
+      </div> -->
+
+
+
+
+
+
     </div>
   </div> 
 
