--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <!-- card Section
   <div class="cardSection container cardimage"></div> -->
 
-  <div class="container-fluid cardimage" style="border: 2px solid rgb(30, 0, 255);">
+  <div class="container-fluid cardimage" >
     <div class="row cardSection">
         <!-- <div class="col-4 ">
             <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
@@ -239,8 +239,7 @@
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner d-flex shadow-lg p-1 mb-2 bg-body-tertiary gap-5">
         <div class="carousel-item active d-flex"></div>
-        <img src="./images/books-1.jpg" class="" alt="...">
-       
+        <img src="./images/books-1.jpg" class="" alt="...">       
         <img src="./images/books-2.jpg" class="" alt="...">
         <img src="./images/books-3.jpg" class=" " alt="...">
         <img src="./images/books-4.jpg" class=" " alt="...">
@@ -266,7 +265,25 @@
 </div>
 </div>
 
+<!-- Trending deals  -->
 
+<div class="container-fluid" style="border: 2px solid red;">
+  <div class="row">
+    <div class="col-12">
+      <h3>Trending deals</h3>
+    </div>
+    <div class="col-2">
+      <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+            <div class="card-body ">
+              <h5 class="card-title" id=""></h5>                             
+              <img src="./images/Trdeing1.jpg" id="cardimage1" class="card-img-bottom w-100" alt="bag1"  >
+            </div>
+                <p class="card-text" id="cardtext1">100% Mulberry Silk Pillowcase </p>
+            </div>
+       </div>
+    </div>
+  </div>
+</div>
 
 
 
