--- a/index.html
+++ b/index.html
@@ -267,21 +267,39 @@
 
 <!-- Trending deals  -->
 
-<div class="container-fluid" style="border: 2px solid red;">
-  <div class="row">
-    <div class="col-12">
+<div class="container-fluid d-flex" style="border: 2px solid red;">
+  <div class="row ">
+    <div class="col-12" style="border: 1px solid black;">
       <h3>Trending deals</h3>
     </div>
     <div class="col-2">
       <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
-            <div class="card-body ">
+            <div class="card-body">
               <h5 class="card-title" id=""></h5>                             
-              <img src="./images/Trdeing1.jpg" id="cardimage1" class="card-img-bottom w-100" alt="bag1"  >
+              <img src="./images/Trdeing1.jpg" id="" class="card-img-bottom " alt="bag1"  >
             </div>
                 <p class="card-text" id="cardtext1">100% Mulberry Silk Pillowcase </p>
             </div>
        </div>
     </div>
+
+    <div class="col-2">
+      <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+            <div class="card-body ">
+              <h5 class="card-title" id=""></h5>                             
+              <img src="./images/Trdeing2.jpg" id="" class="card-img-bottom " alt="bag1"  >
+            </div>
+                <p class="card-text" id="cardtext1">100% Mulberry Silk Pillowcase </p>
+            </div>
+       </div>
+    </div>
+
+
+
+
+
+
+
   </div>
 </div>
 
