--- a/index.html
+++ b/index.html
@@ -267,39 +267,32 @@
 
 <!-- Trending deals  -->
 
-<div class="container-fluid d-flex" style="border: 2px solid red;">
-  <div class="row ">
-    <div class="col-12" style="border: 1px solid black;">
+<div class="container-fluid d-flex" >
+  <div class="row">
+    <div class="col-12" >
       <h3>Trending deals</h3>
     </div>
-    <div class="col-2">
+  <div class="col-3">
       <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
             <div class="card-body">
               <h5 class="card-title" id=""></h5>                             
               <img src="./images/Trdeing1.jpg" id="" class="card-img-bottom " alt="bag1"  >
             </div>
-                <p class="card-text" id="cardtext1">100% Mulberry Silk Pillowcase </p>
+                <p class="card-text" id="">100% Mulberry Silk Pillowcase </p>
             </div>
-       </div>
-    </div>
+      </div>
+  
 
-    <div class="col-2">
-      <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+      <div class="col-3">
+        <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
             <div class="card-body ">
               <h5 class="card-title" id=""></h5>                             
               <img src="./images/Trdeing2.jpg" id="" class="card-img-bottom " alt="bag1"  >
             </div>
-                <p class="card-text" id="cardtext1">100% Mulberry Silk Pillowcase </p>
+                <p class="card-text" id="">100% Mulberry Silk Pillowcase </p>
             </div>
-       </div>
+         </div>
     </div>
-
-
-
-
-
-
-
   </div>
 </div>
 
