--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link disabled" aria-disabled="true"></a>
               </li>
             </ul>
             
@@ -266,8 +266,8 @@
     <div class="col-12" >
       <h3>Trending deals</h3>
     </div>
-  <div class="col-3">
-      <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+  <div class="col-2">
+      <div class="card shadow p-2 mb-2 bg-body-tertiary ">
             <div class="card-body">
               <h5 class="card-title" id=""></h5>                             
               <img src="./images/Trdeing1.jpg" id="" class="card-img-bottom " alt="bag1"  >
@@ -277,7 +277,7 @@
       </div>
   
 
-      <div class="col-3">
+      <div class="col-2">
         <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
             <div class="card-body ">
               <h5 class="card-title" id=""></h5>                             
@@ -286,6 +286,45 @@
                 <p class="card-text" id="">100% Mulberry Silk Pillowcase </p>
             </div>
          </div>
+
+         <div class="col-2">
+          <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+              <div class="card-body ">
+                <h5 class="card-title" id=""></h5>                             
+                <img src="./images/books-10.jpg" id="" class="card-img-bottom " alt="bag1"  >
+              </div>
+                  <p class="card-text" id="">Gritin 16 LED Rechargeable Book Light </p>
+              </div>
+           </div>
+
+           <div class="col-2">
+          <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+              <div class="card-body ">
+                <h5 class="card-title" id=""></h5>                             
+                <img src="./images/Trending3.jpg" id="" class="card-img-bottom " alt="bag1"  >
+              </div>
+                  <p class="card-text" id="">Gritin 16 LED Rechargeable Book Light </p>
+              </div>
+           </div>
+
+           <div class="col-2">
+            <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+                <div class="card-body ">
+                  <h5 class="card-title" id=""></h5>                             
+                  <img src="./images/Trending4.jpg" id="" class="card-img-bottom " alt="bag1"  >
+                </div>
+                    <p class="card-text" id="">AUTOMET women sweetshirt</p>
+                </div>
+             </div>
+
+
+
+
+
+
+
+
+
     </div>
   </div>
 </div>
