--- a/index.html
+++ b/index.html
@@ -317,6 +317,26 @@
                 </div>
              </div>
 
+             <div class="col-2">
+              <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+                  <div class="card-body ">
+                    <h5 class="card-title" id=""></h5>                             
+                    <img src="./images/Trending5.jpg" id="" class="card-img-bottom " alt="bag1"  >
+                  </div>
+                      <p class="card-text" id="">Samsonite Aspire 2-Piece Luggage Sets</p>
+                  </div>
+               </div>
+               <div class="col-2">
+                <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
+                    <div class="card-body ">
+                      <h5 class="card-title" id=""></h5>                             
+                      <img src="./images/Trending6.jpg" id="" class="card-img-bottom " alt="bag1"  >
+                    </div>
+                        <p class="card-text" id="">ANRABESS women 2023 </p>
+                    </div>
+                 </div>
+  
+  
 
 
 
