--- a/index.html
+++ b/index.html
@@ -245,14 +245,14 @@
         </div>
       </div>
       </div> 
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
-      </button>
+      </button> -->
     </div>
   </div>
   </div>
@@ -266,7 +266,7 @@
     <div class="col-12" >
       <h3>Trending deals</h3>
     </div>
-  <div class="col-2">
+  <div class="col">
       <div class="card shadow p-2 mb-2 bg-body-tertiary ">
             <div class="card-body">
               <h5 class="card-title" id=""></h5>                             
@@ -277,7 +277,7 @@
       </div>
   
 
-      <div class="col-2">
+      <div class="col">
         <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
             <div class="card-body ">
               <h5 class="card-title" id=""></h5>                             
@@ -287,7 +287,7 @@
             </div>
          </div>
 
-         <div class="col-2">
+         <div class="col">
           <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
               <div class="card-body ">
                 <h5 class="card-title" id=""></h5>                             
@@ -297,7 +297,7 @@
               </div>
            </div>
 
-           <div class="col-2">
+           <div class="col">
           <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
               <div class="card-body ">
                 <h5 class="card-title" id=""></h5>                             
@@ -307,7 +307,7 @@
               </div>
            </div>
 
-           <div class="col-2">
+           <div class="col">
             <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
                 <div class="card-body ">
                   <h5 class="card-title" id=""></h5>                             
@@ -317,7 +317,7 @@
                 </div>
              </div>
 
-             <div class="col-2">
+             <div class="col">
               <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
                   <div class="card-body ">
                     <h5 class="card-title" id=""></h5>                             
@@ -326,7 +326,7 @@
                       <p class="card-text" id="">Samsonite Aspire 2-Piece Luggage Sets</p>
                   </div>
                </div>
-               <div class="col-2">
+               <div class="col">
                 <div class="card shadow-lg p-2 mb-2 bg-body-tertiary ">
                     <div class="card-body ">
                       <h5 class="card-title" id=""></h5>                             
